--- a/pages/index.css
+++ b/pages/index.css
@@ -2,23 +2,26 @@
     background-color: black;
     color: white;
 }
-
+.page__section {
+max-width: 880px;
+max-width: 100%;
+position: relative;
+margin: 0 auto;
+}
 .page__content {
-    margin-left: 200px;
-    margin-right: 200px;
-
+   display: flex;
+   flex-direction: column;
+   min-height: 100vh;
 }
 
 .header {
     margin-top: 45px;
-    max-width: 880px;
 }
 
 .profile {
     display: flex;
     align-items: center;
     padding-top: 40px;
-
 }
 
 .profile__info {
@@ -29,13 +32,13 @@
     grid-template-columns: minmax(auto, 373px) auto;
 }
 .profile__edit-button {
-    background: transparent url(..images/edit.svg) center no-repeat;
+    background: transparent url(../images/edit.svg) center no-repeat;
     height: 24px;
     width: 24px;
     grid-area: button;
 }
 .profile__add-button {
-    background: transparents url(../images/add-button.png) center no-repeat;
+    background: transparent url(../images/add-button.png) center no-repeat;
     width: 150px;
     height: 50px;
     margin-left: auto;
@@ -53,4 +56,78 @@
     font-weight: 400;
     grid-area: description;
     margin: 0;
+}
+.profile__image {
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    background-position: center;
+    margin-right: 24px;
+}
+
+.cards {
+    /* fonts */
+    margin-top: 30px;
+
+}
+
+.card__list {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, 282px);
+    grid-gap: 20px 17px;
+    padding: 0;
+    margin: 0;
+}
+
+.card {
+display: flex;
+flex-direction: column;
+list-style: none;
+
+}
+
+.card__image {
+width: 282px;
+height: 282px;
+}
+
+.card__description {
+    display: flex;
+    background-color: white;
+    color: black;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card__like-button {
+    background: transparent url(../images/heart-disable.svg) center no-repeat;
+    width: 21px;
+    height: 18px;
+}
+@media screen and (max-width:480px) {
+    .profile{
+        background-color: red;
+        flex-direction: column;
+    }
+    .profile__info{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .profile__desctription {
+        width: 100%;
+        text-align: center;
+    }
+    .profile__ad-button {
+        margin: 0;
+        width: 100%;
+    }
+
 }
