--- a/blocks/card.css
+++ b/blocks/card.css
@@ -29,10 +29,14 @@ height: 282px;
   padding-right: 20px;
   align-items: center;
   justify-content: space-between;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__like-button {
   background: transparent url(../images/heart-disable.svg) center no-repeat;
   width: 21px;
   height: 18px;
+  border: none;
 }
