--- a/pages/index.css
+++ b/pages/index.css
@@ -5,15 +5,15 @@
 @import url(../blocks/profile.css);
 @import url(../blocks/footer.css);
 @import url(../blocks/cards.css);
-
+@import url(../blocks/card__list.css);
 
 
 @media screen and (max-width:480px) {
-    .profile{
+    .profile {
         background-color: red;
         flex-direction: column;
     }
-    .profile__info{
+    .profile__info {
         display: flex;
         flex-wrap: wrap;
         width: 100%;
