--- a/blocks/card.css
+++ b/blocks/card.css
@@ -33,3 +33,11 @@ height: 282px;
   height: 18px;
   border: none;
 }
+.card__list {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 282px);
+  grid-gap: 20px 17px;
+  padding: 0;
+  margin: 0;
+}
