--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url(../blocks/profile.css);
 @import url(../blocks/footer.css);
 @import url(../blocks/cards.css);
+@import url(../blocks/modal.css);
 
 
 
