--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,3 +1,36 @@
+
+.header::before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  opacity: 0.7;
+  background: #545454;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+}
+
 .header {
   margin-top: 45px;
+}
+
+.header__logo {
+  margin-bottom: 41px;
+}
+
+@media screen and (max-width: 320px) {
+  .header::before {
+    width: 320px;
+  }
+
+  .header {
+    margin-top: 28px;
+  }
+
+  .header__logo {
+    height: 24px;
+    width: 126px;
+    margin-bottom: 32px;
+  }
 }
