--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -11,17 +11,15 @@
   margin-bottom: 0;
 }
 
-@media screen and (max-width: 1280px) {
-  .footer__copyright {
-    margin-bottom: 60px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .footer__copyright {
-    font-size: 14px;
-    line-height: 14px;
+@media screen and (max-width: 480px) {
+  .footer {
+    width: 282px;
     margin-top: 48px;
     margin-bottom: 36px;
+  }
+  .footer__copyright {
+    font-size: 14px;
+    margin-right: 19px;
+    line-height: 17px;
   }
 }
