--- a/blocks/header.css
+++ b/blocks/header.css
@@ -19,18 +19,14 @@
   margin-bottom: 41px;
 }
 
-@media screen and (max-width: 1280px) {
-  .header::before {
+@media screen and (max-width: 480px) {
+  .header {
     width: 320px;
   }
-
-  .header {
-    margin-top: 28px;
-  }
-
   .header__logo {
-    height: 24px;
     width: 126px;
+    height: 24px;
+    margin-left: 27px;
     margin-bottom: 32px;
   }
 }
