--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -46,12 +46,43 @@
   margin-right: 24px;
 }
 
+@media screen and (max-width: 775px) {
+  .profile__edit-button {
+    margin-right: 34px;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .profile {
     flex-direction: column;
   }
 
+  .profile__image {
+    max-width: 168.75px;
+    max-height: 127.5px;
+    margin-bottom: 26.25px;
+    margin-left: 32.5px;
+  }
+
+  .profile__edit-button {
+    margin-right: 34px;
+    max-width: 18px;
+    max-height: 18px;
+    margin: 0;
+    margin-top: 3px;
+  }
+
+  .profile__title {
+    max-width: 196px;
+    text-align: center;
+    line-height: 26.63px;
+    font-size: 22px;
+    margin-right: 10px;
+    margin-bottom: 14px;
+  }
+
   .profile__info {
+    max-width: 282px;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -59,51 +90,19 @@
   }
 
   .profile__description {
+    max-width: 282px;
     width: 100%;
     text-align: center;
+    font-size: 14px;
+    line-height: 17px;
   }
 
   .profile__add-button {
+    max-width: 282px;
+    max-height: 50px;
     margin: 0;
+    margin-top: 36px;
     width: 100%;
-    cursor: pointer;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .profile__description {
-    margin-top: 0;
-  }
-
-  .profile__title {
-    font-size: 22px;
-    min-width: 201px;
-    max-width: 222px;
-  }
-}
-
-@media screen and (max-width: 1280px) {
-  .profile {
-    text-align: center;
-  }
-
-  .profile__image {
-    margin: 0px auto 26.25px;
-  }
-
-  .profile__title {
-    line-height: 26.63px;
-  }
-
-  .profile__edit-button {
-    height: 18px;
-    width: 18px;
-    align-self: baseline;
-  }
-
-  .profile__description {
-    font-size: 14px;
-    line-height: 16.94px;
-    margin-bottom: 36px;
+    border-radius: 2px;
   }
 }
