--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,12 @@
-@import "../vendor/normalize.css";
-@import "../vendor/fonts.css";
-@import "../blocks/page.css";
-@import "../blocks/header.css";
-@import "../blocks/profile.css";
-@import "../blocks/cards.css";
-@import "../blocks/card.css";
-@import "../blocks/footer.css";
+@import url("../vendor/normalize.css");
+@import url("../vendor/fonts.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/footer.css");
+@import url("../blocks/profile.css");
+@import url("../blocks/cards.css");
+@import url("../blocks/card.css");
+@import url("../blocks/modal.css");
 
 
 
