--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,4 +1,5 @@
 .page {
+  font-family: Inter, Arial, Helvetica, sans-serif;
   background-color: black;
   color: white;
 }
@@ -15,10 +16,16 @@
   position: relative;
   }
 
-  @media screen and (max-width: 768px) {
-    .page__content {
-      padding-left: 20px;
-      padding-right: 20px;
+  @media screen and (max-width: 1100px) {
+    .page__section {
+      margin: 0 20px;
+      max-width: calc(100% - 40px);
     }
   }
-  
+
+  @media screen and (max-width: 480px) {
+    .page__section {
+      max-width: 330px;
+      margin: auto;
+    }
+  }
