--- a/blocks/header.css
+++ b/blocks/header.css
@@ -13,6 +13,7 @@
 
 .header {
   margin-top: 45px;
+  border-bottom:white solid;
 }
 
 .header__logo {
@@ -20,9 +21,7 @@
 }
 
 @media screen and (max-width: 480px) {
-  .header {
-    width: 320px;
-  }
+
   .header__logo {
     width: 126px;
     height: 24px;
