--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,6 @@
 .footer {
   color: #545454;
+  margin: 67px 0 60px;
 }
 
 .footer__copyright {
@@ -10,7 +11,10 @@
   margin-top: 67px;
   margin-bottom: 0;
 }
+.footer__text{
 
+  margin: 0;
+}
 @media screen and (max-width: 480px) {
   .footer {
     width: 282px;
