--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,7 +1,10 @@
 .profile {
   display: flex;
   align-items: center;
+  padding-bottom: 40px;
   padding-top: 40px;
+  margin: 0 auto;
+  max-width: 880px;
 }
 
 .profile__info {
@@ -42,7 +45,7 @@
   height: 120px;
   width: 120px;
   border-radius: 50%;
-  object-fit: cover;
+  object-fit: contain;
   background-position: center;
   margin-right: 24px;
 }
