updated on cards

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -12,7 +12,13 @@
   height: 282px;
   border-radius: 10px 10px 0 0;
   }
-
+  .card__title {
+    margin: 0;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 900;
+  }
   .card__description {
     display: flex;
     background-color: white;
