--- a/blocks/card.css
+++ b/blocks/card.css
@@ -18,6 +18,9 @@
   font-size: 24px;
   line-height: 29px;
   font-weight: 900;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   }
   .card__description {
     display: flex;
