--- a/blocks/card.css
+++ b/blocks/card.css
@@ -60,3 +60,8 @@
     padding: 0;
     margin: 0;
   }
+  .card__like-button:hover {
+    opacity: 50%;
+    transition: 0.1s;
+    cursor: pointer;
+  }
