--- a/blocks/card.css
+++ b/blocks/card.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   list-style: none;
   border-radius: 10px;
-  overflow: hidden
+  overflow: hidden;
   }
 
   .card__image {
