--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -32,23 +32,23 @@
   border-radius: 2px;
 }
 .profile__title {
+  font-size: 42px;
+  line-height: 48px;
+  font-weight: 500;
+  grid-area: title;
   margin: 0;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  line-height: 29px;
-  font-weight: 900;
+  font-family: "Inter", Arial, sans-serif;
+  width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 .profile__desctription {
-
-  grid-area: description;
-  margin: 0;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  line-height: 29px;
-  font-weight: 900;
+  font-size: 18px;
+    line-height: 22px;
+ font-weight: 400;
+grid-area: description;
+margin: 0;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
