--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -13,16 +13,14 @@
   margin-bottom: 0;
 }
 
-
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 595px) {
   .footer {
-    width: 282px;
-    margin-top: 48px;
-    margin-bottom: 36px;
+    padding: 48px 0 36px 0;
+    max-width: 282px;
   }
+
   .footer__copyright {
-    font-size: 14px;
-    margin-right: 19px;
     line-height: 17px;
+    font-size: 14px;
   }
 }
