--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -121,6 +121,67 @@ margin: 0;
     top: 29px;
     right: 2px;
   }
+  .profile__edit-button:hover {
+    opacity: 60%;
+  }
+
+  .profile__add-button {
+    width: 100%;
+    margin-left: 0;
+    max-width: 282px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .profile {
+    flex-direction: column;
+    margin: 0;
+    padding-top: 38px;
+    width: 100%;
+  }
+
+  .profile__title {
+    font-size: 22px;
+    line-height: 27px;
+    max-width: 196px;
+    padding-top: 26px;
+    text-align: center;
+  }
+
+  .profile__description {
+    width: 100%;
+    max-width: 282px;
+    line-height: 17px;
+    text-align: center;
+    font-size: 14px;
+    padding-bottom: 36px;
+    padding-left: 0;
+  }
+
+  .profile__image {
+    margin: 0;
+  }
+
+  .profile__info {
+    text-align: right;
+    margin: 0;
+    align-items: center;
+    column-gap: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 282px;
+    justify-content: center;
+    position: relative;
+  }
+
+  .profile__edit-button {
+    height: 18px;
+    width: 18px;
+    position: absolute;
+    background-size: 7.5px 7.5px;
+    top: 29px;
+    right: 2px;
+  }
 
   .profile__add-button {
     width: 100%;
