--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,31 +1,33 @@
 .profile {
-  display: flex;
   align-items: center;
-  padding-bottom: 40px;
-  padding-top: 40px;
-  margin: 0 auto;
+  justify-content: center;
+  margin: 40px auto 36px;
   max-width: 880px;
+  display: flex;
 }
 
 .profile__info {
+  margin-left: 19px;
+  margin-right: 19px;
   display: grid;
-  column-gap: 24px;
-  align-items: center;
   grid-template-areas:
-  "title button"
-  "description description";
-  grid-template-columns: minmax(auto, 373px) auto;
-  font-size: 18px;
-  margin-top: 30px;
+    "title button"
+    "description description";
+  grid-template-columns: minmax(auto, 391px) auto;
+  flex-wrap: wrap;
 }
+
 .profile__edit-button {
 
   background: transparent url(../images/edit.svg) center no-repeat;
-  height: 24px;
   width: 24px;
-  border: 1px solid white;
+  height: 24px;
+  border: #ffffff solid 1px;
+  background-size: 10px 10px;
+  margin: 0;
+  grid-area: button;
   cursor: pointer;
-  transition: 1s;
+  align-self: center;
 }
 
 .profile__edit-button:hover {
@@ -33,13 +35,21 @@
 }
 .profile__add-button {
   background: transparent url(../images/add-button.png) center no-repeat;
-  width: 150px;
-  height: 50px;
-  margin-left: auto;
-  border: 2px solid white;
+  padding: 14px 64px;
+  background-color: transparent;
+  box-sizing: border-box;
   border-radius: 2px;
+  height: 50px;
+  width: 150px;
+  border: #ffffff solid 2px;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
   cursor: pointer;
-  transition: 1s;
+  transition: opacity 0.2s linear;
+  background-position: center;
 }
 
 .profile__add-button:hover {
@@ -49,26 +59,30 @@
 }
 
 .pofile__title {
+  font-weight: 500;
   font-size: 42px;
   line-height: 48px;
-  font-weight: 500;
   grid-area: title;
-  margin-top: 0;
-  font-family: "Inter", Arial, sans-serif;
-  width: 100%;
-  overflow: hidden;
+  margin: 0;
+  padding-right: 18px;
   text-overflow: ellipsis;
   white-space: nowrap;
+  overflow: hidden;
 }
 .profile__description {
+  flex-grow: 1;
+  min-width: 0;
   font-size: 18px;
-    line-height: 22px;
- font-weight: 400;
-grid-area: description;
-margin: 0;
-  overflow: hidden;
+  line-height: 21.78px;
+  font-weight: 400;
+  grid-area: description;
+  margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
+  overflow: hidden;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  max-width: 400px;
 }
 .profile__image {
   height: 120px;
@@ -81,60 +95,83 @@ margin: 0;
 
 
 
-@media screen and (min-width: 320px) and (max-width: 768px) {
-  .profile {
-    flex-direction: column;
-    margin: 0;
-    padding-top: 38px;
-    width: 100%;
+  @media screen and (max-width: 780px) {
+    .profile {
+      padding: 0;
+      margin: 43px 0 36px;
+      flex-direction: column;
+      text-align: center;
+    }
+
+    .profile__info {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      width: 100%;
+      margin: 29px 0 33px 0;
+      margin-right: 12px;
+      max-width: 320px;
+      gap: 14px 10px;
+    }
+
+    .profile__title {
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 1.2;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      grid-area: credential;
+      margin: 0;
+      max-width: 250px;
+      text-align: center;
+    }
+
+    .profile__description {
+      width: 100%;
+      font-size: 14px;
+      line-height: 17px;
+      max-width: 282px;
+    }
+
+    .profile__add-button {
+      width: 100%;
+      max-width: 282px;
+      margin: 0;
+      padding-left: 0 19px;
+      background-size: 16px;
+    }
   }
 
-  .profile__title {
-    font-size: 22px;
-    line-height: 27px;
-    max-width: 196px;
-    padding-top: 26px;
-    text-align: center;
-  }
+  @media screen and (max-width: 480px) {
+    .profile {
+      flex-direction: column;
+      margin: 0;
+      text-align: center;
+    }
 
-  .profile__description {
-    width: 100%;
-    max-width: 282px;
-    line-height: 17px;
-    text-align: center;
-    font-size: 14px;
-    padding-bottom: 36px;
-    padding-left: 0;
-  }
+    .profile__add-button {
+      width: 282px;
+      padding: 19px 19px 19px;
+    }
 
-  .profile__image {
-    margin: 0;
-  }
+    .profile__image {
+      margin-top: 38px;
+    }
 
-  .profile__info {
-    text-align: right;
-    margin: 0;
-    align-items: center;
-    column-gap: 16px;
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 282px;
-    justify-content: center;
-    position: relative;
-  }
+    .profile__title {
+      text-align: center;
+    }
 
-  .profile__edit-button {
-    height: 18px;
-    width: 18px;
-    position: absolute;
-    background-size: 7.5px 7.5px;
-    top: 29px;
-    right: 2px;
-  }
+    .profile__description {
+      display: grid;
+      justify-items: center;
+      max-width: 282px;
+    }
 
-  .profile__add-button {
-    width: 100%;
-    margin-left: 0;
-    max-width: 282px;
+    .profile__edit-button {
+      width: 18px;
+      height: 18px;
+      text-align: center;
+    }
   }
-}
