--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,26 +1,32 @@
 .footer {
-  color: #545454;
-  margin: 67px 0 60px;
-
-}
-
-.footer__copyright {
-  font-family: "Inter", Arial, sans-serif;
+  max-width: 880px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
-  margin-top: 67px;
+  line-height: 21.78px;
+  color: #545454;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: flex-start;
   margin-bottom: 0;
+  padding-bottom: 60px;
+  padding-top: 67px;
+}
+.footer__content {
+  margin: 0;
+  padding: 0;
 }
 
-@media screen and (max-width: 595px) {
+@media screen and (max-width: 320px) {
   .footer {
-    padding: 48px 0 36px 0;
-    max-width: 282px;
-  }
-
-  .footer__copyright {
-    line-height: 17px;
     font-size: 14px;
+    line-height: 17px;
+    margin: 48px 19px 36px 19px;
+    max-width: 320px;
+  gap:inherit;
+  }
+  .footer__content {
+    margin: 0;
+    padding: 0;
   }
 }
