--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -17,16 +17,15 @@
   padding: 0;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 595px) {
   .footer {
-    font-size: 14px;
-    line-height: 17px;
-    margin: 48px 19px 36px 19px;
-    max-width: 320px;
-  gap:inherit;
+    padding: 48px 0 36px 0;
+    max-width: 282px;
+    gap:inherit;
   }
+
   .footer__content {
-    margin: 0;
-    padding: 0;
+    line-height: 17px;
+    font-size: 14px;
   }
 }
