--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -34,7 +34,7 @@
   opacity: 60%;
 }
 .profile__add-button {
-  background: transparent url(../images/add-button.png) center no-repeat;
+  background: transparent url(../images/add.svg) center no-repeat;
   padding: 14px 64px;
   background-color: transparent;
   box-sizing: border-box;
@@ -58,7 +58,7 @@
   cursor: pointer;
 }
 
-.pofile__title {
+.profile__title {
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
@@ -88,90 +88,66 @@
   height: 120px;
   width: 120px;
   border-radius: 50%;
-  background-position: center;
   margin-right: 24px;
-   object-fit: contain;
+  object-fit: contain;
+}
+
+
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .profile {
+    flex-direction: column;
+    margin: 0;
+    padding-top: 38px;
+    width: 100%;
   }
 
-
-
-  @media screen and (max-width: 780px) {
-    .profile {
-      padding: 0;
-      margin: 43px 0 36px;
-      flex-direction: column;
-      text-align: center;
-    }
-
-    .profile__info {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      width: 100%;
-      margin: 29px 0 33px 0;
-      margin-right: 12px;
-      max-width: 320px;
-      gap: 14px 10px;
-    }
-
-    .profile__title {
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 1.2;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-      grid-area: credential;
-      margin: 0;
-      max-width: 250px;
-      text-align: center;
-    }
-
-    .profile__description {
-      width: 100%;
-      font-size: 14px;
-      line-height: 17px;
-      max-width: 282px;
-    }
-
-    .profile__add-button {
-      width: 100%;
-      max-width: 282px;
-      margin: 0;
-      padding-left: 0 19px;
-      background-size: 16px;
-    }
+  .profile__title {
+    font-size: 22px;
+    line-height: 27px;
+    max-width: 196px;
+    padding-top: 26px;
+    text-align: center;
   }
 
-  @media screen and (max-width: 480px) {
-    .profile {
-      flex-direction: column;
-      margin: 0;
-      text-align: center;
-    }
-
-    .profile__add-button {
-      width: 282px;
-      padding: 19px 19px 19px;
-    }
-
-    .profile__image {
-      margin-top: 38px;
-    }
-
-    .profile__title {
-      text-align: center;
-    }
-
-    .profile__description {
-      display: grid;
-      justify-items: center;
-      max-width: 282px;
-    }
-
-    .profile__edit-button {
-      width: 18px;
-      height: 18px;
-      text-align: center;
-    }
+  .profile__description {
+    width: 100%;
+    max-width: 282px;
+    line-height: 17px;
+    text-align: center;
+    font-size: 14px;
+    padding-bottom: 36px;
+    padding-left: 0;
   }
+
+  .profile__image {
+    margin: 0;
+  }
+
+  .profile__info {
+    text-align: right;
+    margin: 0;
+    align-items: center;
+    column-gap: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 282px;
+    justify-content: center;
+    position: relative;
+  }
+
+  .profile__edit-button {
+    height: 18px;
+    width: 18px;
+    position: absolute;
+    background-size: 7.5px 7.5px;
+    top: 29px;
+    right: 2px;
+  }
+
+  .profile__add-button {
+    width: 100%;
+    margin-left: 0;
+    max-width: 282px;
+  }
+}
