--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,31 +1,33 @@
 .footer {
-  max-width: 880px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21.78px;
-  color: #545454;
-  flex-wrap: wrap;
-  display: flex;
-  justify-content: flex-start;
-  margin-bottom: 0;
-  padding-bottom: 60px;
-  padding-top: 67px;
+  color: #545454; 
 }
 .footer__content {
-  margin: 0;
-  padding: 0;
+  font-family: "Inter", Arial, sans-serif;
+
+  font-weight: 400;
+
+  font-size: 18px;
+
+  line-height: 22px;
+
+  margin-top: 67px;
+
+  margin-bottom: 0;
+
 }
 
-@media screen and (max-width: 595px) {
+@media screen and (min-width: 320px) and (max-width: 595px) {
   .footer {
-    padding: 48px 0 36px 0;
-    max-width: 282px;
-    gap:inherit;
+    font-size: 14px;
+    line-height: 17px;
+    margin: 48px 19px 36px 19px;
+    max-width: 320px;
   }
 
   .footer__content {
-    line-height: 17px;
     font-size: 14px;
+line-height: 14px;
+margin-top: 48px;
+margin-bottom: 36px;
   }
 }
