--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -12,7 +12,7 @@
 
   margin-top: 67px;
 
-  margin-bottom: 0;
+  margin-bottom: 60px;
 
 }
 
@@ -20,7 +20,7 @@
   .footer {
     font-size: 14px;
     line-height: 17px;
-    margin: 0px 19px 36px 19px;
+    margin: 0px 19px 0px 19px;
     max-width: 320px;
   }
 
