--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,20 +1,22 @@
 .modal {
   position: fixed;
-
   top: 0;
   left: 0;
   bottom:0;
   right: 0;
   background-color: rbga(0, 0, 0, .5);
   z-index: 999;
-display:flex;
-  padding: 0 19px;
+ padding: 0 19px;
+  display: none;
 
 
 }
+.modal__opened {
+  display:flex;
+}
 
 .modal__container {
-  background-color: black;
+  background-color: #fff;
   margin: auto;
   padding: 36px;
   border-radius: 10px;
