--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,17 +1,14 @@
-.modal__ {
+.modal {
   position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rbga(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
-  padding: 0 19px;
-  display: none;
-}
-.modal__opened {
   display: flex;
-  pointer-events: all;
+  padding: 0 19px;
+  visibility: hidden;
 }
 
 .modal__container {
@@ -20,6 +17,22 @@
   padding: 36px;
   border-radius: 10px;
   position: relative;
+}
+
+.modal__title {
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000;
+  margin: 0 0 24px;
+}
+
+.modal_opened {
+  visibility: visible;
+  display: flex;
+  pointer-events: all;
 }
 
 .modal__close {
@@ -36,18 +49,9 @@
   left: calc(100% + 5px);
 }
 
-.modal__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 29px;
-  color: #000;
-  margin: 0 0 24px;
-}
-
 .modal__close:hover {
-  opacity: 0.5;
+  opacity: 0.8;
+  transition: 0.2s;
 }
 
 .modal__form {
@@ -60,4 +64,60 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
+}
+
+.modal__form-input {
+  width: 100%;
+  height: 50px;
+  border-radius: 2px;
+  background-color: transparent;
+  color: #000000;
+  border: none;
+  line-height: 17px;
+  display: flex;
+  border-bottom-style: solid;
+  border-color: rgba(0, 0, 0, 0.2);
+  border-width: 1px;
+  font-family: "Inter", Arial, "Times New Roman";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  text-align: left;
+}
+
+.modal__button {
+  width: 100%;
+  height: 50px;
+  margin-top: 48px;
+  margin-bottom: 36px;
+  border-radius: 2px;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  font-family: "Inter", Arial, "Times New Roman";
+  font-size: 18px;
+  line-height: 22px;
+  cursor: pointer;
+}
+
+.modal__button:hover {
+  opacity: 0.5;
+  transition: 0.2s;
+}
+
+@media screen and (min-width: 320px) and (max-width: 880px) {
+  .modal__container {
+    width: 282px;
+    height: 322px;
+    top: 123px;
+    left: 19px;
+    border: 1px;
+  }
+
+  .modal__close {
+    height: 26px;
+    width: 26px;
+    bottom: calc(100% + 5px);
+    left: calc(100% + 5px);
+  }
 }
