--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -106,6 +106,9 @@
   transition: 0.2s;
 }
 
+.add-card-modal {
+}
+
 @media screen and (min-width: 320px) and (max-width: 880px) {
   .modal__container {
     width: 282px;
