--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -106,7 +106,8 @@
   transition: 0.2s;
 }
 
-.add-card-modal {
+.modal__image-container {
+  margin: auto;
 }
 
 @media screen and (min-width: 320px) and (max-width: 880px) {
