--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -45,7 +45,7 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
-  position: absolute;
+  position: relative;
   bottom: calc(100% + 5px);
   left: calc(100% + 5px);
 }
@@ -82,7 +82,7 @@
   font-family: "Inter", Arial, "Times New Roman";
   font-size: 14px;
   font-weight: 400;
-  line-height: 17px;
+
   text-align: left;
 }
 
@@ -108,6 +108,11 @@
 
 .modal__image-container {
   margin: auto;
+}
+
+.modal__image {
+  max-width: 75vw;
+  max-height: 75vh;
 }
 
 @media screen and (min-width: 320px) and (max-width: 880px) {
