--- a/blocks/card.css
+++ b/blocks/card.css
@@ -32,6 +32,7 @@
   align-items: center;
   justify-content: space-between;
   border-radius: 0px 0px 10px 10px;
+  position: relative;
 }
 .card__image-title {
   font-family: "Inter", Arial, sans-serif;
@@ -45,12 +46,12 @@
 
 .card__like-button {
   background: transparent url(../images/heart-disable.svg) center no-repeat;
-  width: 21px;
+  align-self: center;
   min-width: 21px;
   height: 18px;
-  border: none;
+  border: 0;
+  padding: 0;
   cursor: pointer;
-  transition: opacity 0.5s;
 }
 .card__like-button_active {
   background: transparent url(../images/like-active.svg) center no-repeat;
@@ -62,13 +63,15 @@
 
 .card__delete-button {
   background: transparent url(../images/trash-button.svg) center no-repeat;
-  width: 21px;
-  min-width: 21px;
-  height: 18px;
+  width: 18px;
+  min-width: 18px;
+  height: 19.3px;
   border: none;
   cursor: pointer;
+  position: absolute;
+  top: 0;
+  right: 0;
   transition: opacity 0.5s;
-  position: relative;
 }
 
 .card__delete-button:hover {
