--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -13,10 +13,15 @@
 
 .modal__container {
   background-color: #fff;
+
   margin: auto;
+
   padding: 36px;
+
   border-radius: 10px;
+
   position: relative;
+
   width: 358px;
 }
 
@@ -25,6 +30,7 @@
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
+
   line-height: 29px;
   color: #000;
   margin: 0 0 24px;
@@ -42,67 +48,110 @@
   background-image: url("../images/close.icon.svg");
   background-repeat: no-repeat;
   background-size: contain;
+
   border: none;
+
   background-color: transparent;
+
   cursor: pointer;
-  position: relative;
+
+  position: absolute;
   bottom: calc(100% + 5px);
   left: calc(100% + 5px);
+  z-index: 0;
+  top: -40px;
+  right: -40px;
 }
 
 .modal__close:hover {
   opacity: 0.8;
+
   transition: 0.2s;
 }
 
 .modal__form {
   display: flex;
+
   align-items: center;
+
   row-gap: 8px;
+
   flex-direction: column;
+
   font-family: "Inter", Arial, "Times New Roman";
+
   font-style: normal;
+
   font-weight: 400;
+
   font-size: 14px;
+
   line-height: 17px;
 }
 
 .modal__input {
   width: 100%;
+
   height: 50px;
+
   border-radius: 2px;
+
   background-color: transparent;
+
   color: #000000;
+
   border: none;
+
   line-height: 17px;
+
   display: flex;
+
   border-bottom-style: solid;
+
   border-color: rgba(0, 0, 0, 0.2);
+
   border-width: 1px;
+
   font-family: "Inter", Arial, "Times New Roman";
+
   font-size: 14px;
+
   font-weight: 400;
+
+  line-height: 17px;
 
   text-align: left;
 }
 
 .modal__button {
   width: 100%;
+
   height: 50px;
+
   margin-top: 48px;
+
   margin-bottom: 36px;
+
   border-radius: 2px;
+
   background-color: #000;
+
   color: #fff;
+
   border: none;
+
   font-family: "Inter", Arial, "Times New Roman";
+
   font-size: 18px;
+
   line-height: 22px;
+
   cursor: pointer;
 }
 
 .modal__button:hover {
   opacity: 0.5;
+
   transition: 0.2s;
 }
 
@@ -113,6 +162,25 @@
 .modal__image {
   max-width: 75vw;
   max-height: 75vh;
+}
+
+.modal__save {
+  margin-top: 47px;
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50.15px;
+  background: #000000;
+  border-radius: 2px;
+  color: #fff;
+  border: 0;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 320px) and (max-width: 880px) {
