--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -36,10 +36,12 @@
   margin: 0 0 24px;
 }
 
-.modal__opened {
+.modal_opened {
   visibility: visible;
   display: flex;
   pointer-events: all;
+  opacity: 1;
+  transition: visibility 0s, opacity 0.6s linear;
 }
 
 .modal__close {
@@ -48,13 +50,10 @@
   background-image: url("../images/close.icon.svg");
   background-repeat: no-repeat;
   background-size: contain;
-
   border: none;
-
   background-color: transparent;
-
   cursor: pointer;
-
+  transition: visibility 1s, opacity 0.5s linear;
   position: absolute;
   bottom: calc(100% + 5px);
   left: calc(100% + 5px);
@@ -64,8 +63,7 @@
 }
 
 .modal__close:hover {
-  opacity: 0.8;
-
+  opacity: 1;
   transition: 0.2s;
 }
 
@@ -184,11 +182,11 @@
 
 @media screen and (min-width: 320px) and (max-width: 880px) {
   .modal__container {
+    left: 0;
+    right: 0;
     width: 282px;
     height: 322px;
     top: 123px;
-    left: 19px;
-    border: 1px;
   }
 
   .modal__close {
@@ -196,5 +194,7 @@
     width: 26px;
     bottom: calc(100% + 5px);
     left: calc(100% + 5px);
+    right: 18.3px;
+    left: 265px;
   }
 }
