--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -37,11 +37,13 @@
 }
 
 .modal_opened {
-  visibility: visible;
+  visibility: hidden;
+  display: none;
+  z-index:0;
   display: flex;
   pointer-events: all;
   opacity: 1;
-  transition: visibility 0s, opacity 0.6s linear;
+
 }
 
 .modal__close {
@@ -53,7 +55,6 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
-  transition: visibility 1s, opacity 0.5s linear;
   position: absolute;
   bottom: calc(100% + 5px);
   left: calc(100% + 5px);
