--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -37,31 +37,47 @@
 }
 
 .modal_opened {
-  visibility: hidden;
-  display: none;
-  z-index: 0;
+  visibility: visible;
+
   display: flex;
+
   pointer-events: all;
+
   opacity: 1;
+
+  transition: visibility 0s, opacity 0.6s linear;
 }
 
 .modal__close {
   width: 40px;
+
   height: 40px;
+
   background-image: url("../images/close.icon.svg");
+
   background-repeat: no-repeat;
+
   background-size: contain;
+
   border: none;
+
   background-color: transparent;
+
   cursor: pointer;
+
+  transition: visibility 1s, opacity 0.5s linear;
+
   position: absolute;
+
   bottom: calc(100% + 5px);
+
   left: calc(100% + 5px);
+
   z-index: 0;
+
   top: -40px;
+
   right: -40px;
-  visibility: hidden;
-  display: none;
 }
 
 .modal__close:hover {
