--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -26,14 +26,13 @@
 }
 
 .modal__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-
-  line-height: 29px;
+  width: 238px;
   color: #000;
-  margin: 0 0 24px;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
 }
 
 .modal_opened {
