--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -155,7 +155,23 @@
   max-width: 75vw;
   max-height: 75vh;
 }
-
+.modal__input_type_error {
+  border-bottom: 1px solid red;
+}
+.modal__button_disabled {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  opacity: 0.2;
+  border: 1px solid #000000;
+  border-radius: 2px;
+  cursor: default;
+}
+.modal__error_visible {
+  opacity: 1;
+  left: 0px;
+  top: 5px;
+  position: relative;
+}
 @media screen and (min-width: 320px) and (max-width: 880px) {
   .modal__container {
     left: 0;
