--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -172,6 +172,11 @@
   top: 5px;
   position: relative;
 }
+
+.modal__label {
+  width: 100%;
+}
+
 @media screen and (min-width: 320px) and (max-width: 880px) {
   .modal__container {
     left: 0;
