--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -49,17 +49,6 @@
   cursor: pointer;
 }
 
-.profile__title {
-  font-weight: 500;
-  font-size: 42px;
-  line-height: 48px;
-  grid-area: title;
-  margin: 0;
-  padding-right: 18px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
 .profile__description {
   flex-grow: 1;
   min-width: 0;
@@ -82,6 +71,16 @@
   border-radius: 50%;
   margin-right: 24px;
   object-fit: contain;
+}
+.profile__title {
+  margin: 0;
+  font-size: 42px;
+  line-height: 1.2;
+  font-weight: 500;
+  grid-area: title;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
