--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -1,175 +1,82 @@
 .modal {
-  display: flex;
   position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  padding: 0 19px;
-
-  pointer-events: none;
+  z-index: 99;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  visibility: hidden;
   opacity: 0;
-  transition: visibility 0s 0.6s, opacity 0.6s linear;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+}
+
+.modal_opened {
+  display: flex;
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
 }
 
 .modal__container {
   background-color: #fff;
-
-  margin: auto;
-
-  padding: 36px;
-
-  border-radius: 10px;
-
-  position: relative;
-
-  width: 358px;
-}
-
-.modal__title {
-  width: 238px;
   color: #000;
-  font-family: Inter;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: normal;
-}
-
-.modal_opened {
-  visibility: visible;
-  pointer-events: all;
-  opacity: 1;
-  transition: visibility 0s, opacity 0.6s linear;
+  padding: 36px 36px 48px 36px;
+  width: 358px;
+  height: 258px;
+  border-radius: 10px;
+  position: relative;
 }
 
 .modal__close {
-  width: 40px;
-  height: 40px;
-  background-image: url("../images/close.icon.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
   border: none;
-  background-color: transparent;
-  cursor: pointer;
   position: absolute;
   bottom: calc(100% + 5px);
   left: calc(100% + 5px);
+  width: 40px;
+  height: 40px;
+  background-image: url("../images/close.icon.svg");
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: contain;
+  transition: opacity 0.1s linear;
 }
 
 .modal__close:hover {
-  opacity: 1;
-  transition: 0.2s;
+  opacity: 60%;
+  cursor: pointer;
+}
+
+.modal__heading {
+  margin: 0;
+  padding-bottom: 44px;
 }
 
 .modal__form {
   display: flex;
-
-  align-items: center;
-
-  row-gap: 8px;
-
   flex-direction: column;
-
-  font-family: "Inter", Arial, "Times New Roman";
-
-  font-style: normal;
-
-  font-weight: 400;
-
-  font-size: 14px;
-
-  line-height: 17px;
-}
-
-.modal__input {
-  width: 100%;
-
-  height: 50px;
-
-  border-radius: 2px;
-
-  background-color: transparent;
-
-  color: #000000;
-
+  gap: 24px;
   border: none;
-
-  line-height: 17px;
-
-  display: flex;
-
-  border-bottom-style: solid;
-
-  border-color: rgba(0, 0, 0, 0.2);
-
-  border-width: 1px;
-
-  font-family: "Inter", Arial, "Times New Roman";
-
   font-size: 14px;
-
-  font-weight: 400;
-
-  text-align: left;
+  line-height: 1.2;
 }
 
-.modal__button {
-  width: 100%;
-
-  height: 50px;
-
-  margin-top: 48px;
-
-  border-radius: 2px;
-
-  background-color: #000;
-
-  color: #fff;
-
-  border: none;
-
-  font-family: "Inter", Arial, "Times New Roman";
-
-  font-size: 18px;
-
-  line-height: 22px;
-
-  cursor: pointer;
-}
-
-.modal__button:hover {
-  opacity: 0.5;
-
-  transition: 0.2s;
-}
-
-.modal__button_disabled:hover {
-  opacity: 0.2;
-}
-
-.modal__image-container {
-  margin: auto;
+.modal__label {
   position: relative;
 }
 
-.modal__image {
-  max-width: 75vw;
-  max-height: 75vh;
+.modal__error {
+  font-size: 12px;
+  line-height: 15px;
+  color: #ff0000;
+  width: 358px;
+  margin: 0;
+  transition: opacity 0.3s;
 }
-.modal__input_type_error {
-  border-bottom: 1px solid red;
-}
-.modal__button_disabled {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  opacity: 0.2;
-  border: 1px solid #000000;
-  border-radius: 2px;
-  cursor: default;
-}
+
 .modal__error_visible {
   opacity: 1;
   left: 0px;
@@ -177,40 +84,95 @@
   position: relative;
 }
 
-.modal__label {
+.modal__input {
+  padding-bottom: 13px;
+  border: none;
+  border-bottom: 1px solid;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
   width: 100%;
 }
-.modal__error {
-  font-size: 12px;
-  line-height: 15px;
-  color: #ff0000;
-  transition: opacity 0.3s;
-  width: 358px;
+
+.modal__input_type_error {
+  border-bottom: 1px solid red;
 }
-@media screen and (min-width: 320px) and (max-width: 880px) {
-  .modal__container {
-    left: 0;
-    right: 0;
-    width: 282px;
-    padding: 22px;
-  }
 
+.modal__button {
+  background-color: #000;
+  color: #fff;
+  padding: 14px 124px 18px 124px;
+  margin-top: 18px;
+  border: solid;
+  border-radius: 2px;
+  font-size: 18px;
+  line-height: 1.2;
+  transition: opacity 0.1s linear;
+}
+
+.modal__button:hover {
+  opacity: 80%;
+  cursor: pointer;
+}
+
+.modal__button_disabled:hover {
+  opacity: 0.2;
+  cursor: default;
+}
+
+.modal__button_disabled {
+  opacity: 20%;
+  cursor: default;
+}
+
+.modal__close_preview {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: -30px;
+  right: -30px;
+}
+
+.preview-image {
+  max-width: 75vw;
+  max-height: 75vh;
+}
+
+.modal__preview-text {
+  margin: 0;
+  margin-top: 8px;
+}
+
+.modal__image-container {
+  position: relative;
+}
+
+@media screen and (max-width: 700px) {
   .modal__close {
-    height: 26px;
+    position: absolute;
+    left: calc(100% - 40px);
+    bottom: calc(100% + 14px);
     width: 26px;
-    bottom: calc(100% + 5px);
-
-    right: 18.3px;
-    left: 265px;
+    height: 26px;
   }
 
-  .modal__title {
-    width: 238px;
-    color: #000;
-    font-family: Inter;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: normal;
+  .modal {
+    padding: 0 20px 0 1px;
+  }
+
+  .modal__container {
+    padding: 25px 22px;
+    max-width: 282px;
+    width: 80%;
+  }
+
+  .popup__button {
+    margin-top: 15px;
+  }
+
+  .modal__close_preview {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: -30px;
+    right: -30px;
   }
 }
