--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -2,25 +2,25 @@
   display: flex;
   flex-direction: column;
   border-radius: 10px;
+  list-style: none;
   position: relative;
+}
+
+.card__title {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .card__image {
   width: 282px;
   height: 282px;
-  border-radius: 10px 10px 0 0;
+  border-radius: 10px 10px 0px 0px;
   cursor: pointer;
 }
-.card__title {
-  margin: 0;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  line-height: 29px;
-  font-weight: 900;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
+
 .card__description {
   display: flex;
   background-color: white;
@@ -33,32 +33,6 @@
   justify-content: space-between;
   border-radius: 0px 0px 10px 10px;
 }
-.card__image-title {
-  font-family: "Inter", Arial, sans-serif;
-  line-height: 29px;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 24px;
-  margin: 0;
-  max-width: 200px;
-}
-
-.card__like-button {
-  background: transparent url(../images/heart-disable.svg) center no-repeat;
-  align-self: center;
-  min-width: 21px;
-  height: 18px;
-  border: 0;
-  padding: 0;
-  cursor: pointer;
-}
-.card__like-button_active {
-  background: transparent url(../images/like-active.svg) center no-repeat;
-}
-.card__like-button:hover {
-  opacity: 50.5;
-  cursor: pointer;
-}
 
 .card__delete-button {
   background: transparent url(../images/trash-button.svg) center no-repeat;
@@ -68,11 +42,34 @@
   border: none;
   cursor: pointer;
   position: absolute;
-  transition: opacity 0.5s;
-  top: 15px;
+  top: 18px;
   right: 15px;
+  transition: opacity 0.5s;
 }
 
 .card__delete-button:hover {
   opacity: 0.5;
+}
+
+.card__like-button {
+  background: transparent url(../images/heart-disable.svg) center no-repeat;
+  width: 21px;
+  min-width: 21px;
+  height: 18px;
+  border: none;
+  cursor: pointer;
+  transition: opacity 0.5s;
+}
+
+.card__like-button:hover {
+  opacity: 0.5;
+}
+
+.card__like-button_active {
+  background: transparent url(../images/like-active.svg) center no-repeat;
+  width: 21px;
+  min-width: 21px;
+  height: 18px;
+  border: none;
+  cursor: pointer;
 }
