--- a/src/blocks/cards.css
+++ b/src/blocks/cards.css
@@ -1,18 +1,31 @@
-.cards {
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 24px;
-  font-weight: 900;
-  line-height: 29px;
-  margin-top: 30px;
-  margin: 0 auto;
-  max-width: 880px;
-}
-
 .cards__list {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 282px);
   grid-gap: 20px 17px;
-  margin: 0 auto;
+  list-style: none;
   padding: 0;
+  margin: 0;
+}
+
+.cards {
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 1280px) {
+  .cards__list {
+    grid-template-columns: repeat(3, 282px);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .cards__list {
+    grid-template-columns: repeat(2, 282px);
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .cards__list {
+    grid-template-columns: repeat(1, 282px);
+  }
 }
