--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -1,27 +1,35 @@
-.header {
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
-  color: white;
-  padding-top: 45px;
-  max-width: 880px;
-  min-height: 33px;
+.header::before {
+  content: "";
   width: 100%;
-  margin: 0 auto;
+  height: 1px;
+  opacity: 0.7;
+  background: #545454;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+}
+
+.header {
+  margin-top: 45px;
 }
 
 .header__logo {
   margin-bottom: 41px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 768px) {
-  .header {
-    margin: 0;
-    height: 100%;
-    padding-top: 28px;
+@media screen and (max-width: 320px) {
+  .header::before {
+    width: 320px;
   }
+
+  .header {
+    margin-top: 28px;
+  }
+
   .header__logo {
-    max-width: 126px;
     height: 24px;
+    width: 126px;
     margin-bottom: 32px;
-    padding-left: 27px;
   }
 }
