--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -137,7 +137,8 @@
 }
 
 .modal__button {
-  color: #1f1e1edb;
+  background: transparent url(../images/Black-Button.svg) center no-repeat;
+  color: #fff;
   width: 100%;
   height: 50px;
   margin-top: 48px;
