--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -12,13 +12,15 @@
   pointer-events: none;
   opacity: 0;
   transition: visibility 0s 0.6s, opacity 0.6s linear;
+  transition: visibility 0s 0.6s, opacity 0.6s linear;
 }
 
 .modal_opened {
   visibility: visible;
   pointer-events: all;
   opacity: 1;
-  transition: visibility 0s, opacity 0.6s linear;
+  transition-delay: 0s;
+  transition: opacity 0.5s linear; /* add transition for opacity */
 }
 
 .modal__container {
