--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -78,7 +78,7 @@
 }
 
 .modal__form {
-  max-width: 358px;
+  width: 358px;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -139,7 +139,7 @@
 }
 
 .modal__button {
-  background: transparent url(../images/Black-Button.svg) center no-repeat;
+  background-color: black;
   color: #fff;
   width: 100%;
   height: 50px;
@@ -155,9 +155,9 @@
 }
 
 .modal__button:disabled {
-  color: #a9a9a900;
+  /*color: #a9a9a900; */
   color: #a9a9a9;
-  cursor: default;
+  cursor: not-allowed;
 }
 
 @media screen and (max-width: 755px) {
